# helloagents

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README_CN.md  SKILL.md  bootstrap-lite.md  bootstrap.md  cli.mjs  gemini-extension.json  install.ps1  install.sh  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.helloagents/: CHANGELOG.md  CHANGELOG_2026.md  INDEX.md  context.md
agents/: ha-backend-go.md  ha-backend-java.md  ha-backend-python.md  ha-frontend-react.md  ha-orchestrator.md
core/: fullstack_runtime_cmd.py
docs/: fullstack-mode-design.md  fullstack-mode-guide.md
functions/: fullstack.md
helloagents/: _common.py  cli.py  installer.py
hooks/: hooks-claude.json  hooks-codex.json  hooks.json
scripts/: advisor-state.mjs  capability-registry.mjs  cli-branch.mjs  cli-codex-backup.mjs  cli-codex-config.mjs  cli-codex-goals.mjs  cli-codex-hooks-state.mjs  cli-codex.mjs  cli-config.mjs  cli-doctor-codex.mjs  cli-doctor-render.mjs  cli-doctor.mjs  cli-host-detect.mjs  cli-hosts.mjs  cli-lifecycle-hosts.mjs  cli-lifecycle.mjs  cli-messages.mjs  cli-runtime-carrier.mjs  cli-runtime-root.mjs  cli-toml-values.mjs  cli-toml.mjs  cli-utils.mjs  closeout-state.mjs  delivery-gate-messages.mjs  delivery-gate.mjs  fullstack-cli.mjs  fullstack-config-store.mjs  fullstack-dep-scan.mjs  fullstack-gate.mjs  fullstack-impact.mjs  fullstack-kb-init.mjs  fullstack-migrate.mjs  fullstack-runtime-store.mjs  fullstack-sync.mjs  fullstack-task-store.mjs  fullstack-tech-scanner.mjs  fullstack_config.py  (+43 more)
(+252 files in other folders)
